<resources>
    <string name="app_name">OAuth2 Task</string>
    <string name="label_sign_in">Sign in</string>
    <string name="please_sign_in">Please sign in to continue</string>
    <string name="profile_info">Profile Info</string>
    <string name="sign_out">Sign out</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="greeting_pattern">Greetings, %1$s %2$s %3$s</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="email">Email:</string>
    <string name="country">Country:</string>
    <string name="phone">Phone:</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
</resources>
