<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/iv_avatar"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:divider="@drawable/divider_horizontal"
            android:showDividers="middle"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/ProfileRow">
                <TextView
                    style="@style/ProfileRowLabel"
                    android:id="@+id/tv_label_email"
                    android:text="@string/email"/>
                <TextView
                    style="@style/ProfileRowValue"
                    android:id="@+id/tv_value_email"
                    android:layout_toRightOf="@id/tv_label_email"
                    tools:text="elijah.silverson@gmail.com"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/ProfileRow">
                <TextView
                    style="@style/ProfileRowLabel"
                    android:id="@+id/tv_label_first_name"
                    android:text="@string/first_name"/>
                <TextView
                    style="@style/ProfileRowValue"
                    android:id="@+id/tv_value_first_name"
                    android:layout_toRightOf="@id/tv_label_first_name"
                    tools:text="Elijah"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/ProfileRow">
                <TextView
                    style="@style/ProfileRowLabel"
                    android:id="@+id/tv_label_last_name"
                    android:text="@string/last_name"/>
                <TextView
                    style="@style/ProfileRowValue"
                    android:id="@+id/tv_value_last_name"
                    android:layout_toRightOf="@id/tv_label_last_name"
                    tools:text="Silverson"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/ProfileRow">
                <TextView
                    style="@style/ProfileRowLabel"
                    android:id="@+id/tv_label_country"
                    android:text="@string/country"/>
                <TextView
                    style="@style/ProfileRowValue"
                    android:id="@+id/tv_value_country"
                    android:layout_toRightOf="@id/tv_label_country"
                    tools:text="Germany"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/ProfileRow">
                <TextView
                    style="@style/ProfileRowLabel"
                    android:id="@+id/tv_label_phone"
                    android:text="@string/phone"/>
                <TextView
                    style="@style/ProfileRowValue"
                    android:id="@+id/tv_value_phone"
                    android:layout_toRightOf="@id/tv_label_phone"
                    tools:text="+1233211232"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>